css/main.css
html {
  font-family: 'Alata', sans-serif;
}

body {
  margin: 0;
  background-color: #f5f5f5;
}

.nav a {
  text-decoration: none;
}

header {
  background-color: #5f9ea0;
}

footer {
  background-color: #2f4f4f;
  color:  #f5f5f5;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

li {
  float: left;
}

li a {
  display: block;
  color: #f5f5f5;
  text-align: center;
  text-decoration: none;
}

li a:hover {
  background-color: #2f4f4f;
}

.btn {
  background-color: #008b8b;
  border-color: #008b8b;
}

.slogan {
  color: #20b2aa;
}

.img-flex {
  width: 100%;
}

.logo {
  border-radius: 50%;
}

.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
}

.mySlides {
  display: none;
}

.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

.text {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

.dot {
  cursor: pointer;
  height: 10px;
  width: 10px;
  margin: 0 2px;
  background-color:  #20b2aa;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #008b8b;
}

.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

a:focus {
  outline: 3px solid #000;
}

.skip-links a {
  position: absolute;
  top: -3em;
}

.skip-links a:focus {
  top: 0;
}

label {
  display: block;
  color:  #2f4f4f;
}

form div {
  margin-bottom: 1.5rem;
}

input,
select,
textarea {
  width: 15em;
  font-size: 1.125rem;
  border: 2px solid #008b8b;
  background-color: #e2e2e2;
  border-radius: 5px;
}

input:focus,
textarea:focus,
select:focus {
  background-color: #fff;
}

hr {
  border-color: #20b2aa;
  opacity: .3;
}

fieldset {
  border: 0;
}

table {
  border-collapse: collapse;
}

td,
th {
  border-bottom: 1px solid  #2f4f4f;
  padding: 0.75em;
}

th {
  color:  #20b2aa;
}

